--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
         padding: 0;
         margin: 0;
       }
+      html,body{
+        background-color: #000;
+        padding-top: 100vh;
+
+      }
       nav {
         background-color: #ccc;
         width: 150px;
         position: fixed;
         padding: 30px;
+        top: 0;
       }
       nav li {
         line-height: 40px;
